Apply refactoring + code suggestions
Update Copyright in changed files.
Remove unsued Translation Key's.